task #9 - connection completed
