# internal/handlers/taskHandlers.go
@@ -6,29 +6,33 @@ import (
 	"golang.org/x/net/context"
 )
 
-type Handler struct {
+type TaskHandler struct {
 	Service *taskService.TaskService
 }
 
-func NewTaskHandler(service *taskService.TaskService) *Handler {
-	return &Handler{
+func NewTaskHandler(service *taskService.TaskService) *TaskHandler {
+	return &TaskHandler{
 		Service: service,
 	}
 }
 
-func (h *Handler) GetTasks(_ context.Context, _ tasks.GetTasksRequestObject) (tasks.GetTasksResponseObject, error) {
+func (h *TaskHandler) GetTasks(ctx context.Context, _ tasks.GetTasksRequestObject) (tasks.GetTasksResponseObject, error) {
 	allTasks, err := h.Service.GetAllTasks()
 	if err != nil {
 		return nil, err
 	}
 
-	response := tasks.GetTasks200JSONResponse{}
+	if len(allTasks) == 0 {
+		return tasks.GetTasks200JSONResponse{}, nil
+	}
 
+	var response tasks.GetTasks200JSONResponse
 	for _, tsk := range allTasks {
 		task := tasks.Task{
 			Id:     &tsk.ID,
 			Task:   &tsk.Task,
 			IsDone: &tsk.IsDone,
+			UserId: &tsk.UserID,
 		}
 		response = append(response, task)
 	}
@@ -36,47 +40,74 @@ func (h *Handler) GetTasks(_ context.Context, _ tasks.GetTasksRequestObject) (ta
 	return response, nil
 }
 
-func (h *Handler) PostTasks(_ context.Context, request tasks.PostTasksRequestObject) (tasks.PostTasksResponseObject, error) {
+func (h *TaskHandler) GetUsersUserIdTasks(ctx context.Context, request tasks.GetUsersUserIdTasksRequestObject) (tasks.GetUsersUserIdTasksResponseObject, error) {
+	userID := request.UserId
+	tasksForUser, err := h.Service.GetTasksByUserID(userID)
+	if err != nil {
+		return nil, err
+	}
+
+	if len(tasksForUser) == 0 {
+		return tasks.GetUsersUserIdTasks200JSONResponse{}, nil
+	}
+
+	var response tasks.GetUsersUserIdTasks200JSONResponse
+	for _, tsk := range tasksForUser {
+		task := tasks.Task{
+			Id:     &tsk.ID,
+			Task:   &tsk.Task,
+			IsDone: &tsk.IsDone,
+			UserId: &tsk.UserID,
+		}
+		response = append(response, task)
+	}
+
+	return response, nil
+}
+
+func (h *TaskHandler) PostTasks(ctx context.Context, request tasks.PostTasksRequestObject) (tasks.PostTasksResponseObject, error) {
 	taskRequest := request.Body
 	taskToCreate := taskService.Task{
 		Task:   *taskRequest.Task,
 		IsDone: *taskRequest.IsDone,
+		UserID: *taskRequest.UserId,
 	}
 	createdTask, err := h.Service.CreateTask(taskToCreate)
-
 	if err != nil {
 		return nil, err
 	}
+
 	response := tasks.PostTasks201JSONResponse{
 		Id:     &createdTask.ID,
 		Task:   &createdTask.Task,
 		IsDone: &createdTask.IsDone,
+		UserId: &createdTask.UserID,
 	}
 	return response, nil
 }
 
-func (h *Handler) PatchTasksTaskId(_ context.Context, request tasks.PatchTasksTaskIdRequestObject) (tasks.PatchTasksTaskIdResponseObject, error) {
+func (h *TaskHandler) PatchTasksTaskId(ctx context.Context, request tasks.PatchTasksTaskIdRequestObject) (tasks.PatchTasksTaskIdResponseObject, error) {
 	taskRequest := request.Body
 	taskID := request.TaskId
-	TaskToUpdate := taskService.Task{
+	taskToUpdate := taskService.Task{
 		Task:   *taskRequest.Task,
 		IsDone: *taskRequest.IsDone,
 	}
-	UpdatedTask, err := h.Service.UpdateTaskByID(taskID, TaskToUpdate)
-
+	updatedTask, err := h.Service.UpdateTaskByID(taskID, taskToUpdate)
 	if err != nil {
 		return nil, err
 	}
 
 	response := tasks.PatchTasksTaskId200JSONResponse{
-		Id:     &UpdatedTask.ID,
-		Task:   &UpdatedTask.Task,
-		IsDone: &UpdatedTask.IsDone,
+		Id:     &updatedTask.ID,
+		Task:   &updatedTask.Task,
+		IsDone: &updatedTask.IsDone,
+		UserId: &updatedTask.UserID,
 	}
 	return response, nil
 }
 
-func (h *Handler) DeleteTasksTaskId(_ context.Context, request tasks.DeleteTasksTaskIdRequestObject) (tasks.DeleteTasksTaskIdResponseObject, error) {
+func (h *TaskHandler) DeleteTasksTaskId(ctx context.Context, request tasks.DeleteTasksTaskIdRequestObject) (tasks.DeleteTasksTaskIdResponseObject, error) {
 	taskID := request.TaskId
 	if err := h.Service.DeleteTaskByID(taskID); err != nil {
 		return nil, err
